--- a/outils.html
+++ b/outils.html
@@ -224,8 +224,8 @@ const ToolsPage = () => {
         { name: "Planning", filename: "tools/planning.html", description: "Organisez vos tâches et votre emploi du temps.", category: "Productivité" },
         { name: "Bloc-notes", filename: "tools/note.html", description: "Prise de notes rapide et sauvegarde locale.", category: "Productivité" },
         { name: "Mind Map", filename: "tools/mindmap.html", description: "Visualisez vos idées sous forme de carte mentale.", category: "Productivité" },
-        { name: "Wiki Personnel", filename: "tools/wiki.html", description: "Votre base de connaissances personnelle.", category: "Productivité" },
-        { name: "Monk Mode", filename: "tools/monk.html", description: "Ambiance sonore pour une concentration absolue.", category: "Productivité" },
+        { name: "Wiki Personnel", filename: "tools/wiki.html", description: "Base de connaissances Wikipédia.", category: "Productivité" },
+        { name: "Monk Mode", filename: "tools/monk.html", description: "Trackers d'habitudes.", category: "Productivité" },
         { name: "Signature Mail", filename: "tools/mailsigne.html", description: "Générez une signature HTML pour vos emails.", category: "Productivité" },
         { name: "Diagrammes", filename: "tools/diag.html", description: "Outil de création de schémas techniques.", category: "Productivité" },
         
@@ -246,12 +246,12 @@ const ToolsPage = () => {
         { name: "Convertisseur Image", filename: "tools/convertisseurimage.html", description: "Changez le format (JPG, PNG, WebP).", category: "Images & Audio" },
         { name: "Effaceur de Fond", filename: "tools/removebg.html", description: "Supprimez l'arrière-plan automatiquement.", category: "Images & Audio" },
         { name: "Studio Express", filename: "tools/studioexpresse.html", description: "Éditeur rapide pour créateurs de contenu.", category: "Images & Audio" },
-        { name: "Éditeur Image", filename: "tools/image.html", description: "Retouches simples et filtres.", category: "Images & Audio" },
+        { name: "Éditeur Image", filename: "tools/image.html", description: "Recherche d'images.", category: "Images & Audio" },
         { name: "Générateur Sous-titres", filename: "tools/soustitre.html", description: "Créez des fichiers .srt facilement.", category: "Images & Audio" },
         { name: "Texte 3D", filename: "tools/texte3d.html", description: "Créez des titres en relief.", category: "Images & Audio" },
         { name: "Animation Texte", filename: "tools/texteanimation.html", description: "Effets d'animation pour vos textes.", category: "Images & Audio" },
-        { name: "Synthétiseur", filename: "tools/sinté.html", description: "Piano virtuel et synthétiseur.", category: "Images & Audio" },
-        { name: "ElevenLabs TTS", filename: "tools/elevenlabs.html", description: "Synthèse vocale par IA.", category: "Images & Audio" },
+        { name: "Synthétiseur", filename: "tools/sinte.html", description: "Piano virtuel et synthétiseur.", category: "Images & Audio" },
+        { name: "Voix IA", filename: "tools/elevenlabs.html", description: "Synthèse vocale par IA.", category: "Images & Audio" },
         { name: "Direction Artistique", filename: "tools/da.html", description: "Inspiration et palettes de couleurs.", category: "Images & Audio" },
 
         // Utilitaires & Tech
@@ -269,9 +269,9 @@ const ToolsPage = () => {
 
         // Jeux & Détente
         { name: "Clicker", filename: "tools/clikers.html", description: "Jeu incrémental relaxant.", category: "Jeux & Détente" },
-        { name: "Zone Jeux", filename: "tools/jeux.html", description: "Collection de mini-jeux rétro.", category: "Jeux & Détente" },
+        { name: "Jeux", filename: "tools/jeux.html", description: "Mini-jeux rétro.", category: "Jeux & Détente" },
         { name: "Roue de la Fortune", filename: "tools/roue.html", description: "Tirage au sort aléatoire.", category: "Jeux & Détente" },
-        { name: "Yu-Gi-Oh! Maker", filename: "tools/yugioh.html", description: "Créez vos propres cartes à jouer.", category: "Jeux & Détente" },
+        { name: "Yu-Gi-Oh! Certificat", filename: "tools/yugioh.html", description: "Créez vos propres certificat de collection.", category: "Jeux & Détente" },
         { name: "Panoplie Dofus", filename: "tools/panoplidofus.html", description: "Simulateur d'équipement.", category: "Jeux & Détente" },
         { name: "Undercover", filename: "tools/undercover.html", description: "Le jeu de société pour vos soirées.", category: "Jeux & Détente" },
         { name: "Boule de Cristal", filename: "tools/voyance.html", description: "Posez une question à l'avenir.", category: "Jeux & Détente" },
