--- a/tools/sinte.html
+++ b/tools/sinte.html
@@ -309,7 +309,7 @@
   <canvas id="bg-canvas"></canvas>
 
   <header class="app-header">
-    <a href="index.html" aria-label="Accueil">
+    <a href="laruche.app" aria-label="Accueil">
       <img src="logo-2.png" alt="Logo La Ruche" class="logo-img">
     </a>
   </header>
