--- a/tools/undercover.html
+++ b/tools/undercover.html
@@ -318,7 +318,7 @@
 </head>
 <body data-size="wide">
   <header class="app-header">
-    <a href="index.html" aria-label="Accueil">
+    <a href="/" aria-label="Accueil">
       <img src="logo-2.png" alt="Logo La Ruche" class="logo-img">
     </a>
   </header>
