--- a/tools/revision.html
+++ b/tools/revision.html
@@ -148,7 +148,7 @@
   <canvas id="bg-canvas"></canvas>
 
   <header class="app-header">
-    <a href="index.html" aria-label="Accueil">
+    <a href="/" aria-label="Accueil">
       <img src="logo-2.png" alt="Logo La Ruche" class="logo-img">
     </a>
   </header>
