--- a/tools/note.html
+++ b/tools/note.html
@@ -130,7 +130,7 @@
   <input type="file" id="image-upload" accept="image/*" style="display: none;">
 
   <header class="app-header">
-    <a href="index.html" aria-label="Accueil">
+    <a href="/" aria-label="Accueil">
       <img src="logo-2.png" alt="Logo La Ruche" class="logo-img">
     </a>
   </header>
