--- a/tools/momentomoris.html
+++ b/tools/momentomoris.html
@@ -195,7 +195,7 @@
     <canvas id="bg-canvas"></canvas>
 
     <header class="app-header">
-        <a href="index.html" aria-label="Accueil">
+        <a href="/" aria-label="Accueil">
             <!-- Correction : logo.png pour respecter la norme -->
             <img src="logo-2.png" alt="Logo La Ruche" class="logo-img">
         </a>
