--- a/tools/compresseimage.html
+++ b/tools/compresseimage.html
@@ -269,7 +269,7 @@
     <canvas id="bg-canvas"></canvas>
 
     <header class="app-header">
-        <a href="index.html" aria-label="Accueil">
+        <a href="/" aria-label="Accueil">
             <img src="logo-2.png" alt="Logo Compresseur d'Image" class="logo-img">
         </a>
     </header>
