--- a/github.html
+++ b/github.html
@@ -250,9 +250,9 @@ const GithubPage = () => {
                     </p>
                     
                     <div className="mt-10 grid grid-cols-2 lg:grid-cols-4 gap-4 text-left">
-                        <StatCard icon={<StarIcon />} label="Stars" value="1,2k+" />
-                        <StatCard icon={<ForkIcon />} label="Forks" value="150+" />
-                        <StatCard icon={<UsersIcon />} label="Contributeurs" value="25+" />
+                        <StatCard icon={<StarIcon />} label="Stars" value="0" />
+                        <StatCard icon={<ForkIcon />} label="Forks" value="0" />
+                        <StatCard icon={<UsersIcon />} label="Contributeurs" value="1" />
                         <StatCard icon={<LicenceIcon />} label="Licence" value="Apache 2.0" />
                     </div>
 
