--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ const QrCodeIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fi
 const SignatureIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" /></svg></IconWrapper>;
 const RocketIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M15.59 14.37a6 6 0 01-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 006.16-12.12A14.98 14.98 0 009.631 8.41m5.96 5.96a14.926 14.926 0 01-5.841 2.58m-.119-8.54a6 6 0 00-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 00-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 01-2.448-2.448 14.9 14.9 0 01.06-.312m-2.24 2.39a4.493 4.493 0 00-1.757 4.306 4.493 4.493 0 004.306-1.758M16.5 9a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z" /></svg></IconWrapper>;
 const LightbulbIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 001.5-4.5 6.01 6.01 0 00-1.5-4.5m0 9c-.4 0-.777.047-1.132.137m1.132-.137a6.01 6.01 0 01-1.5-4.5m0 0a6.01 6.01 0 011.5-4.5m0 9c.4 0 .777.047 1.132.137M12 18a2.25 2.25 0 002.25 2.25c.993 0 1.863-.516 2.25-1.294" /><path strokeLinecap="round" strokeLinejoin="round" d="M7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0z" /></svg></IconWrapper>;
-const PuzzleIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M14.25 6.087c0-.355.186-.676.401-.959.221-.29.349-.634.349-1.003 0-1.036-1.007-1.875-2.25-1.875s-2.25.84-2.25 1.875c0 .369.128.713.349 1.003.215.283.401.604.401.959v0a.64.64 0 01-.657.643 48.39 48.39 0 01-4.163-.3c.186 1.613.293 3.25.315 4.907a.656.656 0 01-.658.663v0c-.355 0-.676-.186-.959-.401a1.647 1.647 0 00-1.003-.349c-1.036 0-1.875 1.007-1.875 2.25s.84 2.25 1.875 2.25c.369 0 .713-.128 1.003-.349.283-.215.604-.401.959-.401v0c.31 0 .555.26.532.57a48.039 48.039 0 01-.642 5.056c1.518.19 3.058.309 4.616.354a.64.64 0 00.657-.643v0c0-.355-.186-.676-.401-.959a1.647 1.647 0 00-.349-1.003c0-1.035 1.008-1.875 2.25-1.875 1.243 0 2.25.84 2.25 1.875 0 .369-.128.713-.349 1.003-.215.283-.4.604-.4.959v0c0 .333.277.599.61.58a48.1 48.1 0 005.427-.63 48.05 48.05 0 00.582-4.717.532.532 0 00-.533-.57v0c-.355 0-.676.186-.959.401-.29.221-.634.349-1.003.349-1.035 0-1.875-1.007-1.875-2.25s.84-2.25 1.875-2.25c.37 0 .713.128 1.003.349.283.215.604.401.959.401v0c.31 0 .555-.26.532-.57a48.038 48.038 0 01-.642-5.056c-1.518-.19-3.057-.309-4.616-.354a.64.64 0 00-.657.643v0z" /></svg></IconWrapper>;
+const PuzzleIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M14.25 6.087c0-.355.186-.676.401-.959.221-.29.349-.634.349-1.003 0-1.036-1.007-1.875-2.25-1.875s-2.25.84-2.25 1.875c0 .369.128.713.349 1.003.215.283.401.604.401.959v0a.64.64 0 01-.657.643 48.39 48.39 0 01-4.163-.3c.186 1.613.293 3.25.315 4.907a.656.656 0 01-.658.663v0c-.355 0-.676-.186-.959-.401a1.647 1.647 0 00-1.003-.349c-1.036 0-1.875 1.007-1.875 2.25s.84 2.25 1.875 2.25c.369 0 .713-.128 1.003-.349.283.215.604.401.959-.401v0c.31 0 .555.26.532.57a48.039 48.039 0 01-.642 5.056c1.518.19 3.058.309 4.616.354a.64.64 0 00.657-.643v0c0-.355-.186-.676-.401-.959a1.647 1.647 0 00-.349-1.003c0-1.035 1.008-1.875 2.25-1.875 1.243 0 2.25.84 2.25 1.875 0 .369-.128.713-.349 1.003-.215.283-.4.604-.4.959v0c0 .333.277.599.61.58a48.1 48.1 0 005.427-.63 48.05 48.05 0 00.582-4.717.532.532 0 00-.533-.57v0c-.355 0-.676.186-.959.401-.29.221-.634.349-1.003.349-1.035 0-1.875-1.007-1.875-2.25s.84-2.25 1.875-2.25c.37 0 .713.128 1.003.349.283.215.604.401.959.401v0c.31 0 .555-.26.532-.57a48.038 48.038 0 01-.642-5.056c-1.518-.19-3.057-.309-4.616-.354a.64.64 0 00-.657.643v0z" /></svg></IconWrapper>;
 const TrophyIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.504-1.125-1.125-1.125h-.871M7.5 18.75v-3.375c0-.621.504-1.125 1.125-1.125h.872m5.007 0H9.497m5.007 0a7.454 7.454 0 01-.982-3.172V9.497c0-1.414.726-2.734 1.944-3.535a7.502 7.502 0 00-2.965-1.424m0 0A7.502 7.502 0 006.39 8.038a7.506 7.506 0 001.944 3.535v.027c0 1.256-.37 2.47-1.046 3.535M19.5 9.75a3 3 0 01-6 0 3 3 0 016 0z" /></svg></IconWrapper>;
 
 // Feature Icons
@@ -485,61 +485,40 @@ const ExplainerSection = () => {
 };
 
 const CommunitySection = () => {
-    const [offsetY, setOffsetY] = useState(0);
-    const sectionRef = useRef(null);
-
-    useEffect(() => {
-        const handleScroll = () => {
-            if (sectionRef.current) {
-                const rect = sectionRef.current.getBoundingClientRect();
-                // Start effect when section enters viewport
-                if (rect.top < window.innerHeight && rect.bottom > 0) {
-                    setOffsetY(window.scrollY - sectionRef.current.offsetTop);
-                }
-            }
-        };
-
-        window.addEventListener('scroll', handleScroll);
-        return () => window.removeEventListener('scroll', handleScroll);
-    }, []);
+    // Parallax logic removed for this section as requested
 
     const cards = [
         {
             icon: <LightbulbIcon />,
             title: "Proposez vos idées",
             desc: "Un outil vous manque ? Décrivez-le nous. La communauté vote, on développe.",
-            color: "from-amber-400 to-orange-500",
-            speed: 0.1
+            color: "from-amber-400 to-orange-500"
         },
         {
             icon: <CodeIcon />,
             title: "Codez & Signez",
             desc: "Développeur ? Forkez le projet, ajoutez votre outil. Votre nom reste gravé dans les crédits.",
-            color: "from-blue-400 to-indigo-500",
-            speed: 0.2 // Moves faster
+            color: "from-blue-400 to-indigo-500"
         },
         {
             icon: <PuzzleIcon />,
             title: "Outils Sur-Mesure",
             desc: "Besoin d'un workflow spécifique pour votre entreprise ? On le construit ensemble.",
-            color: "from-emerald-400 to-teal-500",
-            speed: 0.15
+            color: "from-emerald-400 to-teal-500"
         }
     ];
 
     return (
-        <section ref={sectionRef} className="relative overflow-hidden bg-white py-32 min-h-screen flex flex-col items-center justify-center">
+        <section className="relative overflow-hidden bg-white py-32 min-h-screen flex flex-col items-center justify-center">
             {/* Background reused from Section 1 */}
             <div className="absolute inset-0 z-0">
                  <div className="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-white via-transparent to-transparent"></div>
                  <HexagonBackground className="opacity-60" />
             </div>
 
-            {/* Decorative Floating Blobs (Parallax) */}
-            <div className="absolute top-20 left-10 w-64 h-64 bg-purple-200/30 rounded-full blur-[80px]" 
-                 style={{ transform: `translateY(${offsetY * 0.2}px)` }}></div>
-            <div className="absolute bottom-20 right-10 w-96 h-96 bg-indigo-200/30 rounded-full blur-[100px]"
-                 style={{ transform: `translateY(${offsetY * -0.1}px)` }}></div>
+            {/* Decorative Floating Blobs (Static) */}
+            <div className="absolute top-20 left-10 w-64 h-64 bg-purple-200/30 rounded-full blur-[80px]"></div>
+            <div className="absolute bottom-20 right-10 w-96 h-96 bg-indigo-200/30 rounded-full blur-[100px]"></div>
 
             <div className="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full">
                 <div className="text-center mb-24 relative">
@@ -560,10 +539,6 @@ const CommunitySection = () => {
                         <div 
                             key={idx}
                             className="relative group perspective-1000"
-                            style={{ 
-                                transform: `translateY(${offsetY * -card.speed}px)`, // Parallax effect per card
-                                transition: 'transform 0.1s linear' // Smooth out the scroll slightly
-                            }}
                         >
                             <div className="absolute inset-0 bg-gradient-to-br from-violet-500/5 to-fuchsia-500/5 rounded-3xl blur-xl transition-all duration-500 group-hover:blur-2xl opacity-0 group-hover:opacity-100"></div>
                             
