--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
       .animate-fly-in {
         animation: fly-in 1.5s ease-out forwards;
       }
+
+      /* New Popup Animation */
+      @keyframes popup-appear {
+        0% { 
+            opacity: 0; 
+            transform: scale(0.95) translateY(10px); 
+            filter: blur(4px); 
+        }
+        100% { 
+            opacity: 1; 
+            transform: scale(1) translateY(0); 
+            filter: blur(0); 
+        }
+      }
+      .animate-popup {
+        animation: popup-appear 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
     </style>
     <script type="importmap">
 {
@@ -71,7 +88,7 @@ const QrCodeIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fi
 const SignatureIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" /></svg></IconWrapper>;
 const RocketIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M15.59 14.37a6 6 0 01-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 006.16-12.12A14.98 14.98 0 009.631 8.41m5.96 5.96a14.926 14.926 0 01-5.841 2.58m-.119-8.54a6 6 0 00-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 00-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 01-2.448-2.448 14.9 14.9 0 01.06-.312m-2.24 2.39a4.493 4.493 0 00-1.757 4.306 4.493 4.493 0 004.306-1.758M16.5 9a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z" /></svg></IconWrapper>;
 const LightbulbIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 001.5-4.5 6.01 6.01 0 00-1.5-4.5m0 9c-.4 0-.777.047-1.132.137m1.132-.137a6.01 6.01 0 01-1.5-4.5m0 0a6.01 6.01 0 011.5-4.5m0 9c.4 0 .777.047 1.132.137M12 18a2.25 2.25 0 002.25 2.25c.993 0 1.863-.516 2.25-1.294" /><path strokeLinecap="round" strokeLinejoin="round" d="M7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0z" /></svg></IconWrapper>;
-const PuzzleIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M14.25 6.087c0-.355.186-.676.401-.959.221-.29.349-.634.349-1.003 0-1.036-1.007-1.875-2.25-1.875s-2.25.84-2.25 1.875c0 .369.128.713.349 1.003.215.283.401.604.401.959v0a.64.64 0 01-.657.643 48.39 48.39 0 01-4.163-.3c.186 1.613.293 3.25.315 4.907a.656.656 0 01-.658.663v0c-.355 0-.676-.186-.959-.401a1.647 1.647 0 00-1.003-.349c-1.036 0-1.875 1.007-1.875 2.25s.84 2.25 1.875 2.25c.369 0 .713-.128 1.003-.349.283.215.604.401.959-.401v0c.31 0 .555.26.532.57a48.039 48.039 0 01-.642 5.056c1.518.19 3.058.309 4.616.354a.64.64 0 00.657-.643v0c0-.355-.186-.676-.401-.959a1.647 1.647 0 00-.349-1.003c0-1.035 1.008-1.875 2.25-1.875 1.243 0 2.25.84 2.25 1.875 0 .369-.128.713-.349 1.003-.215.283-.4.604-.4.959v0c0 .333.277.599.61.58a48.1 48.1 0 005.427-.63 48.05 48.05 0 00.582-4.717.532.532 0 00-.533-.57v0c-.355 0-.676.186-.959.401-.29.221-.634.349-1.003.349-1.035 0-1.875-1.007-1.875-2.25s.84-2.25 1.875-2.25c.37 0 .713.128 1.003.349.283.215.604.401.959.401v0c.31 0 .555-.26.532-.57a48.038 48.038 0 01-.642-5.056c-1.518-.19-3.057-.309-4.616-.354a.64.64 0 00-.657.643v0z" /></svg></IconWrapper>;
+const PuzzleIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M14.25 6.087c0-.355.186-.676.401-.959.221-.29.349-.634.349-1.003 0-1.036-1.007-1.875-2.25-1.875s-2.25.84-2.25 1.875c0 .369.128.713.349 1.003.215.283.401.604.401.959v0a.64.64 0 01-.657.643 48.39 48.39 0 01-4.163-.3c.186 1.613.293 3.25.315 4.907a.656.656 0 01-.658.663v0c-.355 0-.676-.186-.959-.401a1.647 1.647 0 00-1.003-.349c-1.036 0-1.875 1.007-1.875 2.25s.84 2.25 1.875 2.25c.37 0 .713.128 1.003.349.283.215.604.401.959.401v0c.31 0 .555.26.532.57a48.039 48.039 0 01-.642 5.056c1.518.19 3.058.309 4.616.354a.64.64 0 00.657-.643v0c0-.355-.186-.676-.401-.959a1.647 1.647 0 00-.349-1.003c0-1.035 1.008-1.875 2.25-1.875 1.243 0 2.25.84 2.25 1.875 0 .369-.128.713-.349 1.003-.215.283-.4.604-.4.959v0c0 .333.277.599.61.58a48.1 48.1 0 005.427-.63 48.05 48.05 0 00.582-4.717.532.532 0 00-.533-.57v0c-.355 0-.676.186-.959.401-.29.221-.634.349-1.003.349-1.035 0-1.875-1.007-1.875-2.25s.84-2.25 1.875-2.25c.37 0 .713.128 1.003.349.283.215.604.401.959.401v0c.31 0 .555-.26.532-.57a48.038 48.038 0 01-.642-5.056c-1.518-.19-3.057-.309-4.616-.354a.64.64 0 00-.657.643v0z" /></svg></IconWrapper>;
 const TrophyIcon = () => <IconWrapper><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"><path strokeLinecap="round" strokeLinejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.504-1.125-1.125-1.125h-.871M7.5 18.75v-3.375c0-.621.504-1.125 1.125-1.125h.872m5.007 0H9.497m5.007 0a7.454 7.454 0 01-.982-3.172V9.497c0-1.414.726-2.734 1.944-3.535a7.502 7.502 0 00-2.965-1.424m0 0A7.502 7.502 0 006.39 8.038a7.506 7.506 0 001.944 3.535v.027c0 1.256-.37 2.47-1.046 3.535M19.5 9.75a3 3 0 01-6 0 3 3 0 016 0z" /></svg></IconWrapper>;
 
 // Feature Icons
@@ -854,6 +871,15 @@ const Footer = () => {
     );
 };
 
+// New stylish SVG icons for the popup
+const NewFeatureIcon = ({ path }) => (
+    <div className="flex-shrink-0 flex items-center justify-center w-12 h-12 rounded-2xl bg-gradient-to-br from-violet-100 to-purple-50 text-violet-600 shadow-sm border border-violet-100">
+        <svg xmlns="http://www.w3.org/2000/svg" className="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth={2}>
+            {path}
+        </svg>
+    </div>
+);
+
 const WelcomePopup = () => {
     const [isOpen, setIsOpen] = useState(false);
 
@@ -865,68 +891,91 @@ const WelcomePopup = () => {
 
     if (!isOpen) return null;
 
+    const updates = [
+        {
+            title: "Studio Sous-titres IA",
+            desc: "Éditeur vidéo complet : karaoké dynamique, animations virales et export 4K.",
+            icon: <path strokeLinecap="round" strokeLinejoin="round" d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z" />
+        },
+        {
+            title: "Interface Mobile First",
+            desc: "Une refonte ergonomique totale pensée pour le bout des doigts.",
+            icon: <path strokeLinecap="round" strokeLinejoin="round" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
+        },
+        {
+            title: "Mode Sombre Natif",
+            desc: "Pour les oiseaux de nuit. Vos yeux vous remercieront.",
+            icon: <path strokeLinecap="round" strokeLinejoin="round" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+        },
+        {
+            title: "Performance & Offline",
+            desc: "Utilisez La Ruche sans internet. Architecture PWA instantanée.",
+            icon: <path strokeLinecap="round" strokeLinejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z" />
+        }
+    ];
+
     return (
         <div className="fixed inset-0 z-[100] flex items-center justify-center px-4">
-            {/* Backdrop */}
+            {/* Backdrop with blur */}
             <div 
-                className="absolute inset-0 bg-black/60 backdrop-blur-sm transition-opacity duration-300"
+                className="absolute inset-0 bg-gray-900/60 backdrop-blur-md transition-opacity duration-500"
                 onClick={() => setIsOpen(false)}
             />
             
             {/* Modal */}
-            <div className="relative w-full max-w-md transform transition-all duration-500 animate-fly-in">
+            <div className="relative w-full max-w-lg transform transition-all duration-500 animate-popup">
                 {/* Gradient Border Effect */}
-                <div className="relative p-[1px] rounded-3xl bg-gradient-to-br from-violet-500 via-fuchsia-500 to-indigo-500">
-                    <div className="bg-white rounded-[23px] p-6 md:p-8 relative overflow-hidden shadow-2xl">
+                <div className="relative p-[1px] rounded-[32px] bg-gradient-to-br from-violet-400 via-fuchsia-400 to-indigo-400 shadow-2xl">
+                    <div className="bg-white rounded-[31px] relative overflow-hidden">
                         
-                        {/* Background decoration */}
-                        <div className="absolute -top-10 -right-10 w-32 h-32 bg-purple-100 rounded-full blur-3xl opacity-60"></div>
-                        <div className="absolute -bottom-10 -left-10 w-32 h-32 bg-blue-100 rounded-full blur-3xl opacity-60"></div>
+                        {/* Decorative background blobs */}
+                        <div className="absolute top-0 right-0 w-64 h-64 bg-purple-100 rounded-full blur-[80px] opacity-60 -translate-y-1/2 translate-x-1/3"></div>
+                        <div className="absolute bottom-0 left-0 w-64 h-64 bg-blue-100 rounded-full blur-[80px] opacity-60 translate-y-1/3 -translate-x-1/3"></div>
 
                         {/* Content */}
-                        <div className="relative z-10">
-                            <div className="flex justify-between items-start mb-6">
-                                <div className="p-3 bg-violet-50 rounded-2xl text-violet-600 shadow-sm">
-                                    <RocketIcon />
+                        <div className="relative z-10 p-8 md:p-10">
+                            <div className="flex justify-between items-start mb-8">
+                                <div>
+                                    <div className="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-violet-100 text-violet-700 text-xs font-bold uppercase tracking-wider mb-3">
+                                        <span className="relative flex h-2 w-2">
+                                          <span className="animate-ping absolute inline-flex h-full w-full rounded-full bg-violet-400 opacity-75"></span>
+                                          <span className="relative inline-flex rounded-full h-2 w-2 bg-violet-500"></span>
+                                        </span>
+                                        Coming Soon
+                                    </div>
+                                    <h3 className="text-3xl font-black text-gray-900 tracking-tight">
+                                        La Ruche <span className="text-transparent bg-clip-text bg-gradient-to-r from-violet-600 to-indigo-600">v2.0</span>
+                                    </h3>
+                                    <p className="mt-2 text-gray-500 leading-relaxed">
+                                        Nous préparons une mise à jour massive. Voici un avant-goût de ce qui arrive.
+                                    </p>
                                 </div>
                                 <button 
                                     onClick={() => setIsOpen(false)}
-                                    className="p-2 hover:bg-gray-100 rounded-full text-gray-400 transition-colors"
+                                    className="p-2 -mr-2 -mt-2 hover:bg-gray-100 rounded-full text-gray-400 hover:text-gray-600 transition-colors"
                                 >
                                     <CloseIcon />
                                 </button>
                             </div>
 
-                            <h3 className="text-2xl font-bold text-gray-900 mb-2">
-                                Prochaine Mise à Jour
-                            </h3>
-                            <p className="text-gray-500 mb-6 leading-relaxed text-sm">
-                                La Ruche continue d'évoluer ! Voici un aperçu des fonctionnalités en cours de développement pour la prochaine version.
-                            </p>
-
-                            <div className="space-y-4 mb-8">
-                                <div className="flex items-start gap-4 p-4 rounded-xl bg-gray-50 border border-gray-100 hover:border-violet-200 transition-all duration-300 hover:shadow-sm group">
-                                    <span className="text-2xl group-hover:scale-110 transition-transform duration-300">🎥</span>
-                                    <div>
-                                        <h4 className="font-bold text-gray-900 text-sm">Sous-titres IA TikTok</h4>
-                                        <p className="text-gray-500 text-xs mt-1">Générez automatiquement des sous-titres dynamiques et stylés pour vos vidéos virales.</p>
+                            <div className="space-y-6 mb-10">
+                                {updates.map((item, idx) => (
+                                    <div key={idx} className="flex items-start gap-4 group">
+                                        <NewFeatureIcon path={item.icon} />
+                                        <div className="pt-1">
+                                            <h4 className="font-bold text-gray-900 text-base group-hover:text-violet-700 transition-colors">{item.title}</h4>
+                                            <p className="text-gray-500 text-sm mt-0.5 leading-snug">{item.desc}</p>
+                                        </div>
                                     </div>
-                                </div>
-
-                                <div className="flex items-start gap-4 p-4 rounded-xl bg-gray-50 border border-gray-100 hover:border-violet-200 transition-all duration-300 hover:shadow-sm group">
-                                    <span className="text-2xl group-hover:scale-110 transition-transform duration-300">📱</span>
-                                    <div>
-                                        <h4 className="font-bold text-gray-900 text-sm">Optimisation Mobile</h4>
-                                        <p className="text-gray-500 text-xs mt-1">Refonte complète pour une expérience 100% fluide et responsive sur tous les outils.</p>
-                                    </div>
-                                </div>
+                                ))}
                             </div>
 
                             <button 
                                 onClick={() => setIsOpen(false)}
-                                className="w-full py-3.5 rounded-xl bg-gradient-to-r from-violet-600 to-indigo-600 text-white font-bold text-sm shadow-lg shadow-violet-200 hover:shadow-xl hover:scale-[1.02] active:scale-[0.98] transition-all duration-200"
+                                className="w-full py-4 rounded-xl bg-gray-900 text-white font-bold text-base shadow-lg hover:shadow-xl hover:scale-[1.01] active:scale-[0.99] transition-all duration-200 flex items-center justify-center gap-2 group"
                             >
-                                Génial, j'ai hâte !
+                                <span>Génial, j'ai hâte !</span>
+                                <span className="group-hover:translate-x-1 transition-transform">→</span>
                             </button>
                         </div>
                     </div>
