--- a/outils.html
+++ b/outils.html
@@ -23,17 +23,24 @@
         width: 170px; 
         height: 190px;
         position: relative;
-        transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+        transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1), filter 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
         filter: drop-shadow(0 8px 6px rgba(0,0,0,0.6));
         cursor: pointer;
         display: flex;
         justify-content: center;
         align-items: center;
         margin: 0 auto;
+        /* Hardware acceleration fixes */
+        transform: translateZ(0);
+        -webkit-transform: translateZ(0);
+        will-change: transform, filter;
+        backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
       }
 
       .hex-card:hover {
-        transform: translateY(-8px) scale(1.05);
+        transform: translateY(-8px) scale(1.05) translateZ(0);
+        -webkit-transform: translateY(-8px) scale(1.05) translateZ(0);
         filter: drop-shadow(0 15px 15px rgba(139, 92, 246, 0.5)); 
         z-index: 20;
       }
@@ -43,6 +50,7 @@
         height: 100%;
         background: linear-gradient(135deg, #a78bfa 0%, #7c3aed 30%, #4c1d95 100%);
         clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+        -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -53,6 +61,7 @@
         height: 96%;
         background: linear-gradient(to bottom, #2e1065, #17152e);
         clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+        -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -72,6 +81,7 @@
         height: 45%;
         background: linear-gradient(to bottom, rgba(255,255,255,0.1), transparent);
         clip-path: polygon(50% 0%, 100% 0, 100% 100%, 0 100%, 0 0);
+        -webkit-clip-path: polygon(50% 0%, 100% 0, 100% 100%, 0 100%, 0 0);
         pointer-events: none;
       }
       
@@ -105,6 +115,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
@@ -471,7 +482,7 @@ const ToolsPage = () => {
                         </div>
                         <div className="flex flex-wrap justify-center gap-6">
                             {topTools.map((tool, index) => (
-                                <div key={`top-${index}`} className="transform hover:z-20 transition-all duration-300">
+                                <div key={`top-${index}`} className="relative hover:z-20 transition-all duration-300">
                                     <HexagonCard tool={tool} icon={getCategoryIcon(tool.category)} />
                                 </div>
                             ))}
@@ -529,5 +540,6 @@ root.render(
 );
 
     </script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
